--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           
           <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-               <li><a href="tel:+254 725 164 293"  class="">+254 725 164 293</a></li>
+               <li><a href="tel:+254 725 164 293"  class="">+254 723 049 924</a></li>
                     <li><a href="tel:+254 757 690 123" class="">+254 757 690 123 </a></li>
                     <li><a href="mailto:info@lawsam.co.ke" class="">info@Lawsam.co.ke </a></li>
              <!-- <li class="active"><a href="index.html">Home</a></li>
@@ -212,7 +212,7 @@
               </div>
               <div>
                 <h3>Supply Chain Investigations</h3>
-                <p>Supply chain investigations play a critical role in today's business landscape, encompassing partnerships with suppliers, agents, distributors, consultants, and other contractors. These investigations are vital for ensuring transparency and mitigating risks.
+                <p>Supply chain investigations play a critical role in today's business landscape, encompassing partnerships with suppliers, agents, distributors, consultants, and other contractors.
                   These investigations are vital for ensuring transparency and mitigating risks.
                 </p>
                 <p><a href="#"></a></p>
@@ -731,7 +731,7 @@
               <div class="col-6 col-sm-6 col-md-4">
                 <div class="widget">
                   <ul class="links list-unstyled">
-                    <li><a href="tel:+254 725 164 293">+254 725 164 293</a></li>
+                    <li><a href="tel:+254 725 164 293">+254 723 049 924</a></li>
                     <li><a href="tel:+254 757 690 123">+254 757 690 123 </a></li>
                     <li><a href="#">Maalim Juma Rd, Kilimani, Nairobi</a></li>
                     <li><a href="mailto:info@lawsam.co.ke">info@lawsam.co.ke</a></li>
