--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <title>Lawsam Limited. Corporate investigations, Risk management, and Market research.  </title>
 <style>
   .lawsam-logo {
-    margin-top: 64px !important;
+    margin-top: 14px !important;
   }
   .btn.btn-primary {
     background: #1a32b8 !important;
@@ -63,15 +63,15 @@
 
       <nav class="site-nav">
         <div class="logo">
-          <a href="index.html" class="text-white mt-4"><img src="images/lawsam.png" width="100px"class="lawsam-logo"><span class="text-black">.</span></a>
+          <a href="index.html" class="text-white mt-4"><img src="images/lawsam.png" width="70px"class="lawsam-logo"><span class="text-black">.</span></a>
         </div>
         <div class="row align-items-center">
           
           <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-               <li><a href="tel:+254 723 049 924"  class="">+254 723 049 924</a></li>
-                    <li><a href="tel:+254 757 690 123" class="">+254 757 690 123 </a></li>
-                    <li><a href="mailto:info@lawsam.co.ke" class="">info@Lawsam.co.ke </a></li>
+                <li><a href="tel:+254 723 049 924"  class="btn btn-warning m-1">+254 723 049 924</a></li>
+                    <li><a href="tel:+254 757 690 123" class="btn btn-warning m-1">+254 757 690 123 </a></li>
+                    <li><a href="mailto:info@lawsam.co.ke" class="btn btn-warning m-1">info@Lawsam.co.ke </a></li>
              <!-- <li class="active"><a href="index.html">Home</a></li>
 
               <li class="has-children">
