--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </ul>
 
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right menu-absolute">
-              <li class="btn btn-sm btn-primary"><a href="mailto:Lucy@lawsam.co.ke" target="_blank">Get in touch</a></li>
+              <li class="btn btn-outline-primary m-1"><a href="mailto:Lucy@lawsam.co.ke" target="_blank">Get in touch</a></li>
             </ul>
 
             <a href="#" class="burger light ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
